--- a/bin/fxml/GameWindow.fxml
+++ b/bin/fxml/GameWindow.fxml
@@ -4,10 +4,9 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 
-
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GameController">
    <children>
-      <Canvas fx:id="boardCanvas" height="512.0" layoutX="43.0" layoutY="44.0" width="512.0" />
-      <Button layoutX="673.0" layoutY="44.0" mnemonicParsing="false" text="Restart" />
+      <Canvas fx:id="boardCanvas" height="512.0" layoutX="43.0" layoutY="44.0" onMouseClicked="#mouseDetected" width="512.0" />
+      <Button layoutX="673.0" layoutY="44.0" mnemonicParsing="false" onAction="#restartGame" text="Restart" />
    </children>
 </Pane>
