--- a/src/resources/fxml/GameWindow.fxml
+++ b/src/resources/fxml/GameWindow.fxml
@@ -2,11 +2,18 @@
 
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.Pane?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.GameController">
    <children>
-      <Canvas fx:id="boardCanvas" height="512.0" layoutX="43.0" layoutY="44.0" onMouseClicked="#mouseDetected" width="512.0" />
-      <Button layoutX="673.0" layoutY="44.0" mnemonicParsing="false" onAction="#restartGame" text="Restart" />
+      <Canvas fx:id="boardCanvas" height="512.0" layoutX="45.0" layoutY="45.0" onMouseClicked="#mouseDetected" width="512.0" />
+      <Button layoutX="640.0" layoutY="44.0" mnemonicParsing="false" onAction="#restartGame" prefHeight="27.0" prefWidth="78.0" text="Restart" />
+      <Button layoutX="640.0" layoutY="79.0" mnemonicParsing="false" onAction="#finishGame" prefHeight="27.0" prefWidth="78.0" text="Finish" />
+      <Label layoutX="590.0" layoutY="136.0" prefHeight="17.0" prefWidth="50.0" text="depth:" />
+      <TextField fx:id="depthField" layoutX="640.0" layoutY="131.0" prefHeight="27.0" prefWidth="78.0" />
+      <TextField fx:id="logField" layoutX="72.0" layoutY="568.0" prefHeight="27.0" prefWidth="723.0" />
+      <Label layoutX="22.0" layoutY="572.0" prefHeight="17.0" prefWidth="50.0" text="status:" />
    </children>
 </Pane>
